# KnownUser.V3.Python

./: LICENSE  README.md  setup.cfg
Documentation/: README.md
SDK/: .gitignore  _run_all_tests.py  test_integration_config_helpers.py  test_known_user.py  test_queue_url_params.py  test_user_in_queue_service.py  test_user_in_queue_state_cookie_repository.py
SDK/queueit_knownuserv3/: connector_diagnostics.py  http_context_providers.py  integration_config_helpers.py  known_user.py  models.py  queue_url_params.py  queueit_helpers.py  user_in_queue_service.py  user_in_queue_state_cookie_repository.py
