[metadata]
name = queueit-knownuserv3
version = 0.0.2
author = Example Author
author_email = author@example.com
description = KnownUser python sdk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OneOf-Inc/KnownUser.V3.Python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = SDK
packages = find:
python_requires = >=3.6

[options.packages.find]
where = SDK
